# celegans-struct-annotator

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: config.example.yaml
docs/: MEETING_DEMO.md  MEETING_SCRIPT.md  PROJECT_STATE.md
src/: __init__.py  alphafold_client.py  config.py  data_loader.py  foldseek_runner.py  main.py  result_parser.py  structure_manager.py  uniprot_client.py
tests/: test_config.py  test_data_loader.py  test_foldseek_runner.py  test_result_parser.py  test_structure_manager.py
